# shopee-scraper-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: api.py  extension.py  main.py
